# mpcheck

./: Makefile.in  configure  meson.build  mkinstalldirs
